modifying css for UI

--- a/templates/InputOutput.html
+++ b/templates/InputOutput.html
@@ -1,72 +1,175 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
+
+    
     <style>
+        body {
+             background-image: url('static/background.png');
+             background-repeat: no-repeat;
+        }
+        h1{
+            text-align: center;
+            color: rgb(21, 5, 242);
+        }
         table {
             border: 1px solid black;
             margin-left: auto;
             margin-right: auto;
+            text-align: center;
+            background-color: aquamarine;
         }
-  
+
         input[type="button"] {
-            width: 100%;
-            padding: 20px 40px;
-            background-color: green;
+            width: 70px;
+            height: 70px;
+            padding: 15px 5px;
+            background-color: rgba(96, 172, 244, 0.874);
             color: white;
-            font-size: 24px;
+            font-size: 18px;
             font-weight: bold;
-            border: none;
-            border-radius: 5px;
+            /* border: none; */
+            border-radius: 50%;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
         }
-  
+
+        input[type="button"]:hover {
+           background-color: #0056b3;
+        }
+        
+
         input[type="text"] {
-            padding: 20px 30px;
+            padding: 20px 0px;
+            /* width: 30%; */
             font-size: 24px;
             font-weight: bold;
             border: none;
             border-radius: 5px;
             border: 2px solid black;
+            text-align: center;
         }
-        output[type="text"]{   
+
+        input[name="C"] {
+            background-color: rgb(240, 84, 84);
+        }
+
+        input[name="C"]:hover {
+            background-color: rgb(249, 21, 21);
+        }
+
+        input[name="="] {
+            background-color: rgb(243, 135, 68);
+        }
+
+        input[name="="]:hover {
+            background-color: rgb(255, 68, 0);
+        }
+
+        input[name="/"], input[name="+"], input[name="root"], input[name="%"], input[name="*"], input[name="-"] {
+            background-color: rgb(255, 179, 0);
+        }
+
+        input[name="/"]:hover,
+        input[name="+"]:hover,
+        input[name="root"]:hover,
+        input[name="%"]:hover,
+        input[name="*"]:hover,
+        input[name="-"]:hover {
+            background-color: rgb(255, 140, 0);
+            /* Add additional styles for the hover effect here */
+        }
+
+        input[name="sin"], input[name="cos"], input[name="tan"], input[name="inv"], input[name="log"], input[name="e"] {
+            background-color: rgb(181, 187, 136);
+        }
+
+        input[name="sin"]:hover,
+        input[name="cos"]:hover,
+        input[name="tan"]:hover,
+        input[name="inv"]:hover,
+        input[name="log"]:hover,
+        input[name="e"]:hover {
+            background-color: rgb(154, 166, 65);
+        }
+
+
+        output[type="text"] {
             padding: 20px 30px;
             font-size: 80px;
             font-weight: bold;
             border: none;
             border-radius: 5px;
             border: 2px solid black;
-        
         }
     </style>
-    
-    <title>Calculator</title>
-	<script src="static/utility.js"></script>
-  </head>
-  <body>
-	<h2>Calculator</h2>	
-	<form name="my_form" >
-	<table id="calcu">
-	 
-	<tr>
-	<td colspan="2"> <input type="text" name = "N1"></td>
-	<td colspan="2"> <input type="text" name = "N2"></td>  
-	</tr>
-	 
-<tr>
-<td><input type="button" class="btn btn-sm" onclick="submitData('add')" value="+"></td>
-<td><input type="button" class="btn btn-sm" onclick="submitData('your-function')" value="Symbol"></td>
-<td><input type="button" class="btn btn-sm" onclick="submitData('your-function')" value="Symbol"></td>
-<td><input type="button" class="btn btn-sm" onclick="submitData('your-function')" value="Symbol"></td>
-</tr>
-      
-<tr>
-<td><input type="button" class="btn btn-sm" onclick="submitData('your-function')" value="Symbol"></td>
-<td><input type="button" class="btn btn-sm" onclick="submitData('your-function')" value="Symbol"></td>
-<td><input type="button" class="btn btn-sm" onclick="submitData('your-function')" value="Symbol"></td>
-<td><input type="button" class="btn btn-sm" onclick="submitData('your-function')" value="Symbol"></td>
-</tr> 
 
-</table>	
-</form>			
+    <title>Calculator</title>
+    <script src="static/utility.js"></script>
+</head>
+
+<body>
+    <h1>Calculator</h1>
+    <form name="my_form">
+        <table id="calcu">
+
+            <tr>
+                <td colspan="2"> <input type="text" name="N1" placeholder="Number"></td>
+                <td colspan="2"> <input type="text" name="N2" placeholder="Number"></td>
+            </tr>
+            <tr>
+                <td colspan="4"><input style="color: red;" id="res" type="text" name="res" placeholder="Result"></td>
+            </tr>
+
+            <tr>
+                <td><input name="sin" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="sin"></td>
+                <td><input name="cos" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="cos"></td>
+                <td><input name="tan" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="tan"></td>
+                <td><input name="inv" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="inv"></td>
+            </tr>
+
+            <tr>
+                <td><input name="C" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="C"></td>
+                <td><input name="root" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="&#8730;"></td>
+                <td><input name="%" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="%"></td>
+                <td><input name="/" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="/"></td>
+            </tr>
+
+            <tr>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="7"></td>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="8"></td>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="9"></td>
+                <td><input name="*" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="*"></td>
+            </tr>
+
+            <tr>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="4"></td>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="5"></td>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="6"></td>
+                <td><input name="-" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="-"></td>
+            </tr>
+
+            <tr>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="1"></td>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="2"></td>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="3"></td>
+                <td><input name="+" type="button" class="btn btn-sm" onclick="submitData('add')" value="+"></td>
+                
+            </tr>
+
+            <tr>
+                <td><input name="log" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="log"></td>
+                <td><input name="number" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="0"></td>
+                <td><input name="e" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="e"></td>
+                <td><input name="=" type="button" class="btn btn-sm" onclick="submitData('your-function')" value="="></td>
+            </tr>
+
+            
+
+        </table>
+    </form>
 </body>
+
 </html>
